added apetizer partial to /dinners

--- a/app/views/dinners/index.html.erb
+++ b/app/views/dinners/index.html.erb
@@ -1,26 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Appetizers</h1>
+<h1>Dinners</h1>
+
+<%= render "/appetizers/index", :appetizers => @appetizers %>
 
 <table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Price</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @appetizers.each do |appetizer| %>
+    <% @dinners.each do |dinner| %>
       <tr>
-        <td><%= appetizer.title %></td>
-        <td><%= appetizer.description %></td>
-        <td><%= appetizer.price %></td>
-        <td><%= link_to 'Show', appetizer %></td>
-        <td><%= link_to 'Edit', edit_appetizer_path(appetizer) %></td>
-        <td><%= link_to 'Destroy', appetizer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= dinner.title %></td>
+        <td><%= dinner.description %></td>
+        <td><%= link_to 'Show', dinner %></td>
+        <td><%= link_to 'Edit', edit_dinner_path(dinner) %></td>
+        <td><%= link_to 'Destroy', dinner, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Appetizer', new_appetizer_path %>
+<%= link_to 'New Dinner', new_dinner_path %>
