added soups and dips scaffolding

--- a/app/views/dinners/index.html.erb
+++ b/app/views/dinners/index.html.erb
@@ -5,3 +5,7 @@
 <%= render "/appetizers/index", :appetizers => @appetizers %>
 
 <%= render "/tapas/index", :tapas => @tapas %>
+
+<%= render "/soups/index", :soups => @soups %>
+
+<%= render "/dips/index", :dips => @dips %>
