--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -6,7 +6,7 @@
   <div class="row">
   <div class="col-md-6 col-lg-3">
 
-    <div class="card text-center" style="width: 20rem;">
+    <div class="card text-center">
     <%= image_tag 'food01' %>
       <div class="card-block">
       <%= link_to "Dinner", dinners_path, class: "btn btn-outline-success" %>
