added background image and job application

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,13 @@
     <%= link_to "Dessert", desserts_path, class: "dropdown-item" %>
 </div>
 </li>
+
+  <ul class="navbar-nav">
+    <li class="nav-item">
+    	<%= link_to "Apply", apply_path , class: "btn btn-primary" %>
+
+    </li>
+
 </ul>
 
 </nav>
