--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <div class="container">
-  <h1> Welcom to he Mayan Kitchen</h1>
+  <h1 id="title"> Welcom to the Mayan Kitchen!</h1>
 </div>
 
 <div class="container" id="slick">
