--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,11 +3,10 @@
 
 
 body {
-	background: black;
+	background: url('/assets/mayan-background.png');
 }
 
 h1, h2, h3, h4, h5, h6, p {
-	color: white;
 }
 
 .btn {
@@ -40,6 +39,7 @@ h1, h2, h3, h4, h5, h6, p {
 	color: white;
 }
 
-div {
-	background: black;
+#title {
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
