added proper menu_item database, and implemented in card system.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,10 +22,10 @@
     <span class="sr-only">Toggle Dropdown</span>
   </button>
   <div class="dropdown-menu">
-    <%= link_to "Dinner", dinners_path, class: "dropdown-item"%>
-    <%= link_to "Lunch", lunches_path, class: "dropdown-item"%>
-    <%= link_to "Brunch", brunches_path, class: "dropdown-item"%>
-    <%= link_to "Dessert", desserts_path, class: "dropdown-item" %>
+    <%= link_to "Dinner", main_dinner_path, class: "dropdown-item"%>
+    <%= link_to "Lunch", main_lunch_path, class: "dropdown-item"%>
+    <%= link_to "Brunch", main_brunch_path, class: "dropdown-item"%>
+    <%= link_to "Dessert", main_dessert_path, class: "dropdown-item" %>
 </div>
 </li>
 
