--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -9,7 +9,7 @@
     <div class="card text-center">
     <%= image_tag 'food01' %>
       <div class="card-block">
-      <%= link_to "Dinner", dinners_path, class: "btn btn-outline-success" %>
+      <%= link_to "Dinner", main_dinner_path, class: "btn btn-outline-success" %>
   </div>
 </div>
 
@@ -22,7 +22,7 @@
     <div class="card text-center" style="width: 20rem;">
     <%= image_tag 'food02' %>
       <div class="card-block">
-      <%= link_to "Lunch", lunches_path, class: "btn btn-outline-success" %>
+      <%= link_to "Lunch", main_lunch_path, class: "btn btn-outline-success" %>
   </div>
 </div>
 
@@ -33,7 +33,7 @@
     <div class="card text-center" style="width: 20rem;">
     <%= image_tag 'food03' %>
       <div class="card-block">
-      <%= link_to "Brunch", brunches_path, class: "btn btn-outline-success" %>
+      <%= link_to "Brunch", main_brunch_path, class: "btn btn-outline-success" %>
   </div>
 </div>
 </div>
@@ -43,7 +43,7 @@
     <div class="card text-center" style="width: 20rem;">
     <%= image_tag 'food04' %>
       <div class="card-block">
-      <%= link_to "Dessert", desserts_path, class: "btn btn-outline-success" %>
+      <%= link_to "Dessert", main_dessert_path, class: "btn btn-outline-success" %>
   </div>
 </div>
 </div>
