--- a/app/views/menu_items/_form.html.erb
+++ b/app/views/menu_items/_form.html.erb
@@ -27,13 +27,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :menu_type %>
-    <%= form.text_field :menu_type, id: :menu_item_menu_type %>
+    <%= form.label :type %>
+    <%= form.text_field :type, id: :menu_item_type %>
   </div>
 
   <div class="field">
-    <%= form.label :food_type %>
-    <%= form.text_field :food_type, id: :menu_item_food_type %>
+    <%= form.label :label %>
+    <%= form.text_field :label, id: :menu_item_label %>
   </div>
 
   <div class="actions">
