--- a/app/views/menu_items/show.html.erb
+++ b/app/views/menu_items/show.html.erb
@@ -16,13 +16,13 @@
 </p>
 
 <p>
-  <strong>Menu type:</strong>
-  <%= @menu_item.menu_type %>
+  <strong>Type:</strong>
+  <%= @menu_item.type %>
 </p>
 
 <p>
-  <strong>Food type:</strong>
-  <%= @menu_item.food_type %>
+  <strong>Label:</strong>
+  <%= @menu_item.label %>
 </p>
 
 <%= link_to 'Edit', edit_menu_item_path(@menu_item) %> |
