--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -8,8 +8,8 @@
       <th>Title</th>
       <th>Description</th>
       <th>Price</th>
-      <th>Menu type</th>
-      <th>Food type</th>
+      <th>Type</th>
+      <th>Label</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,8 +20,8 @@
         <td><%= menu_item.title %></td>
         <td><%= menu_item.description %></td>
         <td><%= menu_item.price %></td>
-        <td><%= menu_item.menu_type %></td>
-        <td><%= menu_item.food_type %></td>
+        <td><%= menu_item.type %></td>
+        <td><%= menu_item.label %></td>
         <td><%= link_to 'Show', menu_item %></td>
         <td><%= link_to 'Edit', edit_menu_item_path(menu_item) %></td>
         <td><%= link_to 'Destroy', menu_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
