added file extensions to images

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -25,8 +25,8 @@
     </div>
     <div class="col-sm-6">
       <h2> Follow Us!</h2>
-    <%= image_tag 'facebook' %>
-    <%= image_tag 'twitter' %>
+    <%= image_tag 'facebook.png' %>
+    <%= image_tag 'twitter.png' %>
 
   </div>
 </div>
