--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -7,7 +7,7 @@
   <div class="col-md-6 col-lg-3">
 
     <div class="card text-center">
-    <%= image_tag 'food01' %>
+    <%= image_tag 'food01.jpg' %>
       <div class="card-block">
       <%= link_to "Dinner", main_dinner_path, class: "btn btn-outline-success" %>
   </div>
@@ -20,7 +20,7 @@
 <div class="col-md-6 col-lg-3">
 
     <div class="card text-center" style="width: 20rem;">
-    <%= image_tag 'food02' %>
+    <%= image_tag 'food02.jpg' %>
       <div class="card-block">
       <%= link_to "Lunch", main_lunch_path, class: "btn btn-outline-success" %>
   </div>
@@ -31,7 +31,7 @@
 <div class="col-md-6 col-lg-3">
 
     <div class="card text-center" style="width: 20rem;">
-    <%= image_tag 'food03' %>
+    <%= image_tag 'food03.jpg' %>
       <div class="card-block">
       <%= link_to "Brunch", main_brunch_path, class: "btn btn-outline-success" %>
   </div>
@@ -41,7 +41,7 @@
 <div class="col-md-6 col-lg-3">
 
     <div class="card text-center" style="width: 20rem;">
-    <%= image_tag 'food04' %>
+    <%= image_tag 'food04.jpg' %>
       <div class="card-block">
       <%= link_to "Dessert", main_dessert_path, class: "btn btn-outline-success" %>
   </div>
