added image-url to background image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 
 
 body {
-	background-image: url(mayan-background.png);
+	background-image: image-url('mayan-background.png');
 }
 
 h1, h2, h3, h4, h5, h6, p {
