--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -2,9 +2,10 @@
   <h1> Menu</h1>
 </div>
 
+<div class="row">
 <div class="container">
   <div class="row">
-  <div class="col-md-6 col-lg-3">
+  <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
     <%= image_tag 'food01.jpg' %>
@@ -17,9 +18,9 @@
 
 
 
-<div class="col-md-6 col-lg-3">
+<div class="col-md-6 col-lg-4">
 
-    <div class="card text-center" style="width: 20rem;">
+    <div class="card text-center">
     <%= image_tag 'food02.jpg' %>
       <div class="card-block">
       <%= link_to "Lunch", main_lunch_path, class: "btn btn-outline-success" %>
@@ -28,9 +29,9 @@
 
 </div>
 
-<div class="col-md-6 col-lg-3">
+<div class="col-md-6 col-lg-4">
 
-    <div class="card text-center" style="width: 20rem;">
+    <div class="card text-center">
     <%= image_tag 'food03.jpg' %>
       <div class="card-block">
       <%= link_to "Brunch", main_brunch_path, class: "btn btn-outline-success" %>
@@ -38,9 +39,9 @@
 </div>
 </div>
 
-<div class="col-md-6 col-lg-3">
+<div class="col-md-6 col-lg-4">
 
-    <div class="card text-center" style="width: 20rem;">
+    <div class="card text-center">
     <%= image_tag 'food04.jpg' %>
       <div class="card-block">
       <%= link_to "Dessert", main_dessert_path, class: "btn btn-outline-success" %>
