added admin@mayan kitchen.com as the recipient of the job applications.

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -126,7 +126,7 @@ return true; }
 <tr> <td colspan="2" style="text-align: center;">
 
 <div style="float: right"> <a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
-<script src="https://www.100forms.com/js/FORMKEY:BWBDMG3HRWN5/SEND:awheat1989@gmail.com" type="text/javascript"></script>
+<script src="https://www.100forms.com/js/FORMKEY:BWBDMG3HRWN5/SEND:admin@mayankitchen.com" type="text/javascript"></script>
 <input name="skip_submit" type="submit" value="Send Application" />
 </td> </tr>
 </table>
