ammended application for employment to client's expectations

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,4 +1,12 @@
-<div class="container">
+
+<h1>Mayan Kitchen</h1>
+<h6>507 Braud Street | Chattanooga, TN 37402 
+</br>
+Office: 423-682-7835 Fax: 423-682-7836
+</h6>
+<h2> Application for Employment</h2>
+
+
 <form action="//submit.form" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
 <script type="text/javascript">
 function ValidateForm(frm) {
@@ -12,33 +20,33 @@ return true; }
 </script>
 
 <table border="0" cellpadding="5" cellspacing="0">
-<tr> <td style="width: 50%">
-<label for="First_Name"><b>First name *</b></label><br />
+<tr> 
 
-<input name="First_Name" type="text" maxlength="50" style="width: 260px" />
-</td> 
-<td style="width: 50%">
-<label for="Last_Name">
-	<b>Last name *</b>
+<tr> <td colspan="2">
+<label for="Name"><b>Name *</b>
 </label><br />
 
-<input name="Last_Name" type="text" maxlength="50" style="width: 260px" />
+<input name="Name" type="text" maxlength="100" style="width: 535px" />
 </td> </tr> 
+
+<tr> <td colspan="2">
+<label for="Address"><b>Address *</b>
+</label><br />
+
+<input name="Address" type="text" maxlength="100" style="width: 535px" />
+</td> </tr> 
+
+</tr> 
+
 <tr> <td colspan="2">
 <label for="Email_Address"><b>Email *</b>
 </label><br />
 
 <input name="Email_Address" type="text" maxlength="100" style="width: 535px" />
 </td> </tr> 
-<tr> <td colspan="2">
-</tr> 
+<tr> 
+ 
 
-<tr> <td colspan="2">
-<label for="Position"><b>Position you are applying for *</b>
-</label><br />
-
-<input name="Position" type="text" maxlength="100" style="width: 535px" />
-</td> </tr> 
 <tr> <td>
 
 <label for="Date of Birth"><b>Date of Birth *</b></label><br />
@@ -51,27 +59,133 @@ return true; }
 <input name="Phone" type="text" maxlength="50" style="width: 260px" />
 
 </td> </tr> 
-<tr> <td>
 
-<label for="Salary"><b>Salary Requested</b></label><br /> 
-<input name="Salary" type="text" maxlength="50" style="width: 260px" /> 
+<tr> <td colspan="2">
+<label for="Position"><b>Position(s) applying for *</b>
+</label><br />
 
-</td> <td> 
-
-<label for="StartDate"><b>When can you start?</b></label><br />
-<input name="StartDate" type="text" maxlength="50" style="width: 260px" />
-
-
+<input name="Position" type="text" maxlength="100" style="width: 535px" />
 </td> </tr> 
+
+<tr><td>
+	<h2>Availability</h2>
+</td></tr>
+<tr> 
+
+<td> 
+
+
+<label for="Monday"><b>Monday</b></label><br />
+<input name="Monday" type="text" maxlength="50" style="width: 260px" />
+
+</td> 
+
+<td>
+<label for="Tuesday"><b>Tuesday</b></label><br />
+<input name="Tuesday" type="text" maxlength="50" style="width: 260px" />
+
+
+</td> 
+</tr>
+<tr>
+<td>
+<label for="Wednesday"><b>Wednesday</b></label><br />
+<input name="Wednesday" type="text" maxlength="50" style="width: 260px" />
+
+
+</td> 
+
+<td>
+<label for="Thursday"><b>Thursday</b></label><br />
+<input name="Thursday" type="text" maxlength="50" style="width: 260px" />
+
+
+</td> 
+
+</tr>
+
+<tr>
+
+<td>
+<label for="Friday"><b>Friday</b></label><br />
+<input name="Friday" type="text" maxlength="50" style="width: 260px" />
+
+</td> 
+
+
+<td>
+<label for="Saturday"><b>Saturday</b></label><br />
+<input name="Saturday" type="text" maxlength="50" style="width: 260px" />
+
+
+</td> 
+</tr> 
+
+<tr>
+
+<td>
+<label for="Sunday"><b>Sunday</b></label><br />
+<input name="Sunday" type="text" maxlength="50" style="width: 260px" />
+
+
+</td> 
+
+</rt>
 
 <tr> <td colspan="2">
 </td> </tr> 
 
 <tr> <td colspan="2">
 
-<label for="Availability"><b>Availabilty (Please list all days)</b></label><br />
+<label for="Conflicts"><b>Possible Scheduling Conflics(School, Jobs, Vacations)</b></label><br />
 <input name="Availability" type="text" maxlength="100" style="width: 535px" />
 </td> </tr> 
+
+<tr><td>
+	<h2>Education History</h2>
+</td></tr>
+
+<tr> <td colspan="2">
+
+<label for="High School"><b>Name of High School</b></label><br />
+<input name="High School" type="text" maxlength="100" style="width: 535px" />
+</td>
+
+<tr> <td>
+
+<label for="High School Grad"><b>Graduation Date</b></label><br />
+<input name="High School Grad" type="text" maxlength="50" style="width: 260px" />
+
+</td> 
+
+ </tr> 
+
+ </tr> 
+
+ <tr> <td colspan="2">
+
+<label for="College"><b>College</b></label><br />
+<input name="College" type="text" maxlength="100" style="width: 535px" />
+</td>
+</tr>
+<tr> <td>
+
+<label for="College Graduation"><b>Graduation Date</b></label><br />
+<input name="College Graduation" type="text" maxlength="50" style="width: 260px" />
+
+</td> 
+<td>
+
+<label for="College Focus"><b>Focus of Study</b></label><br />
+<input name="College Focus" type="text" maxlength="50" style="width: 260px" />
+
+</td> </tr> 
+
+
+
+<tr><td>
+	<h2>Work History</h2>
+</td></tr>
 
 <tr> <td colspan="2">
 
@@ -113,7 +227,6 @@ return true; }
 
 </td> </tr> 
 
- </tr> 
 
 <tr> <td colspan="2">
 
@@ -126,9 +239,8 @@ return true; }
 <tr> <td colspan="2" style="text-align: center;">
 
 <div style="float: right"> <a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
-<script src="https://www.100forms.com/js/FORMKEY:BWBDMG3HRWN5/SEND:admin@mayankitchen.com" type="text/javascript"></script>
+<script src="https://www.100forms.com/js/FORMKEY:BWBDMG3HRWN5/SEND:awheat1989@gmail.com" type="text/javascript"></script>
 <input name="skip_submit" type="submit" value="Send Application" />
 </td> </tr>
 </table>
 </form>
-</div>
