reapplied container for job application

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 
 <h1>Mayan Kitchen</h1>
 <h6>507 Braud Street | Chattanooga, TN 37402 
@@ -244,3 +245,4 @@ return true; }
 </td> </tr>
 </table>
 </form>
+</div>
