--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,4 @@
 @import "bootstrap";
-@import 'slick';
 
 
 body {
@@ -43,3 +42,7 @@ h1, h2, h3, h4, h5, h6, p {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
+.card {
+    background: sandybrown;
+    }
