--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -2,34 +2,22 @@
 
 <h1>Menu Items</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Type</th>
-      <th>Label</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container">
+<div class="row">
+  <% @menu_items.each do |menu_item| %>
 
-  <tbody>
-    <% @menu_items.each do |menu_item| %>
-      <tr>
-        <td><%= menu_item.title %></td>
-        <td><%= menu_item.description %></td>
-        <td><%= menu_item.price %></td>
-        <td><%= menu_item.type %></td>
-        <td><%= menu_item.label %></td>
-        <td><%= link_to 'Show', menu_item %></td>
-        <td><%= link_to 'Edit', edit_menu_item_path(menu_item) %></td>
-        <td><%= link_to 'Destroy', menu_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class="col-sm-6 col-lg-4">
+      <div class="card text-center">
+        <div class="card block">
+          <h4 class="card-title"><%= menu_item.title %></h4>
+          <p class="card-text"><%= menu_item.description %></p> 
+        </div>
+      </div>
+    </div>
 
+  <% end %>
+</div>
+</div>
 <br>
 
 <%= link_to 'New Menu Item', new_menu_item_path %>
