--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,7 +1,7 @@
 <div class="apply">
 
 <h1>Mayan Kitchen</h1>
-<h6>507 Braud Street | Chattanooga, TN 37402 
+<h6>507 Broad Street | Chattanooga, TN 37402 
 </br>
 Office: 423-682-7835 Fax: 423-682-7836
 </h6>
