--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Dinner Menu</h1>
 
-<h2>Antojiotos (Appetizers)</h2>
+<h2 class="menu-head">Antojiotos (Appetizers)</h2>
 
 <div class="container">
 <div class="row">
@@ -20,7 +20,7 @@
 </div>
 </div>
 
-<h2>Tapas</h2>
+<h2 class="menu-head">Tapas</h2>
 
 <div class="container">
 <div class="row">
@@ -38,7 +38,7 @@
 </div>
 </div>
 
-<h2>Sopas (Soups)</h2>
+<h2 class="menu-head">Sopas (Soups)</h2>
 
 <div class="container">
 <div class="row">
@@ -56,7 +56,7 @@
 </div>
 </div>
 
-<h2>Favorite Dips</h2>
+<h2 class="menu-head">Favorite Dips</h2>
 <h4>Served with Tri Color Tortilla Chips</h4>
 
 <div class="container">
@@ -75,7 +75,7 @@
 </div>
 </div>
 
-<h2>Nachos</h2>
+<h2 class="menu-head">Nachos</h2>
 
 <div class="container">
 <div class="row">
@@ -93,7 +93,7 @@
 </div>
 </div>
 
-<h2>Ensaladas (Salads)</h2>
+<h2 class="menu-head">Ensaladas (Salads)</h2>
 
 <div class="container">
 <div class="row">
@@ -111,7 +111,7 @@
 </div>
 </div>
 
-<h2>Bisteks (Steaks)</h2>
+<h2 class="menu-head">Bisteks (Steaks)</h2>
 
 <div class="container">
 <div class="row">
@@ -129,7 +129,7 @@
 </div>
 </div>
 
-<h2>Pollo (Chicken)</h2>
+<h2 class="menu-head">Pollo (Chicken)</h2>
 
 <div class="container">
 <div class="row">
@@ -147,7 +147,7 @@
 </div>
 </div>
 
-<h2>Cerdo (Pork)</h2>
+<h2 class="menu-head">Cerdo (Pork)</h2>
 
 <div class="container">
 <div class="row">
@@ -165,7 +165,7 @@
 </div>
 </div>
 
-<h2>Mariscos (Seafood)</h2>
+<h2 class="menu-head">Mariscos (Seafood)</h2>
 
 <div class="container">
 <div class="row">
@@ -183,7 +183,7 @@
 </div>
 </div>
 
-<h2>Side Dishes</h2>
+<h2 class="menu-head">Side Dishes</h2>
 
 <div class="container">
 <div class="row">
@@ -201,8 +201,7 @@
 </div>
 </div>
 
-<h1> Otras Especilidades</h1>
-<h2>Other Specialties</h2>
+<h1 class="menu-head"> Otras Especilidades </br> (Other Specialties)</h1>
 
 <h2>Fajitas</h2>
 
@@ -222,7 +221,7 @@
 </div>
 </div>
 
-<h2>Chimichangas</h2>
+<h2 class="menu-head">Chimichangas</h2>
 
 <div class="container">
 <div class="row">
@@ -240,7 +239,7 @@
 </div>
 </div>
 
-<h2>Tacos</h2>
+<h2 class="menu-head">Tacos</h2>
 
 <div class="container">
 <div class="row">
@@ -258,7 +257,7 @@
 </div>
 </div>
 
-<h2>Quesadillas</h2>
+<h2 class="menu-head">Quesadillas</h2>
 
 <div class="container">
 <div class="row">
@@ -276,7 +275,7 @@
 </div>
 </div>
 
-<h2>Enchiladas</h2>
+<h2 class="menu-head">Enchiladas</h2>
 
 <div class="container">
 <div class="row">
