--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -14,8 +14,8 @@
         </div>
       </div>
     </div>
-        <td><%= link_to 'Edit', edit_menu_item_path(menu_item) %></td>
-    <td><%= link_to 'Destroy', menu_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%= link_to 'Edit', edit_menu_item_path(menu_item) %>
+    <%= link_to 'Destroy', menu_item_path(menu_item), method: :delete, data: { confirm: 'Are you sure?' } %>
 
   <% end %>
 </div>
