added simple_form gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,3 +63,11 @@ h1, h2, h3, h4, h5, h6, p {
   text-shadow: 1px 1px 1px rgba(1,1,1,0.1), 2px 2px 0px rgba(1,1,1,1.05);
 
 }
+
+.card-text {
+    font: 100 20px/1.5 Times New Roman;
+}
+
+form {
+    padding-left: 20px;
+}
