--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -13,6 +13,7 @@
         <div class="card block">
           <h4 class="card-title"><%= appetizer.title %></h4>
           <p class="card-text"><%= appetizer.description %></p>
+          <p class="card-footer"> $<%= appetizer.price %></p>
         </div>
       </div>
     </div>
