added logo to apply page.

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,10 +1,12 @@
 <div class="apply">
+<div class="container">
+<%= image_tag 'mayan-logo.jpg', :height => 200, :width => 350 %>
+</div>
 
-<h1>Mayan Kitchen</h1>
-<h6>507 Broad Street | Chattanooga, TN 37402 
+<h4>507 Broad Street | Chattanooga, TN 37402 
 </br>
 Office: 423-682-7835 Fax: 423-682-7836
-</h6>
+</h4>
 <h2> Application for Employment</h2>
 
 
@@ -240,7 +242,7 @@ return true; }
 <tr> <td colspan="2" style="text-align: center;">
 
 <div style="float: right"> <a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
-<script src="https://www.100forms.com/js/FORMKEY:BWBDMG3HRWN5/SEND:awheat1989@gmail.com" type="text/javascript"></script>
+<script src="https://www.100forms.com/js/FORMKEY: UPBU7KZQGT8E/SEND:admin@mayankitchen.com" type="text/javascript"></script>
 <input name="skip_submit" type="submit" value="Send Application" />
 </td> </tr>
 </table>
