added container to address.

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -2,13 +2,13 @@
 <div class="container">
 <%= image_tag 'mayan-logo.jpg', :height => 200, :width => 350 %>
 </div>
-
+<div class="container">
 <h4>507 Broad Street | Chattanooga, TN 37402 
 </br>
 Office: 423-682-7835 Fax: 423-682-7836
 </h4>
 <h2> Application for Employment</h2>
-
+</div>
 
 <form action="//submit.form" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
 <script type="text/javascript">
