--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -14,7 +14,7 @@
         </div>
       </div>
     </div>
-        <%= link_to 'Edit', edit_menu_item_path(menu_item) %>
+        <%= link_to( 'Edit', edit_menu_item_path(menu_item)) %>
     <%= link_to 'Destroy', menu_item_path(menu_item), method: :delete, data: { confirm: 'Are you sure?' } %>
 
   <% end %>
