adjusted apply page for client.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,3 +71,13 @@ h1, h2, h3, h4, h5, h6, p {
 form {
     padding-left: 20px;
 }
+
+.apply {
+    padding-top: 25px;
+    padding-left: 25px;
+}
+
+#logo {
+    float: right;
+    padding-top: 25px;
+}
