--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,10 @@ h1, h2, h3, h4, h5, h6, p {
     background: black;
     color: #ffffff;
 }
+
+.btn-warning {
+    background: sandybrown;
+}
  
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
     background: #33a6cc;
@@ -81,4 +85,20 @@ form {
     float: right;
     padding-top: 200px;
     padding-right: 100px;
+}
+
+.menu-title {
+    font: 100 60px/1.5 'Pacifico', Helvetica, sans-serif;
+    color: black;
+    text-shadow: 4px 4px 4px rgba(1,1,1,0.1), 3px 3px 0px rgba(1,1,1,1.05);
+    background: none;
+    border-style: solid;
+    border-top:  black;
+    text-align: center;
+}
+
+.logo {
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
 }
