--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1> Menu</h1>
+  <h1 class="menu-title"> Menus</h1>
 </div>
 
 <div class="row">
@@ -10,7 +10,7 @@
     <div class="card text-center">
     <%= image_tag 'food01.jpg' %>
       <div class="card-block">
-      <%= link_to "Dinner", main_dinner_path, class: "btn btn-outline-success" %>
+      <%= link_to "Dinner", dinner_path, class: "btn btn-warning" %>
   </div>
 </div>
 
@@ -23,7 +23,7 @@
     <div class="card text-center">
     <%= image_tag 'food02.jpg' %>
       <div class="card-block">
-      <%= link_to "Lunch", main_lunch_path, class: "btn btn-outline-success" %>
+      <%= link_to "Lunch", lunch_path, class: "btn btn-warning" %>
   </div>
 </div>
 
@@ -34,7 +34,7 @@
     <div class="card text-center">
     <%= image_tag 'food03.jpg' %>
       <div class="card-block">
-      <%= link_to "Brunch", main_brunch_path, class: "btn btn-outline-success" %>
+      <%= link_to "Brunch", brunch_path, class: "btn btn-warning" %>
   </div>
 </div>
 </div>
@@ -44,10 +44,17 @@
     <div class="card text-center">
     <%= image_tag 'food04.jpg' %>
       <div class="card-block">
-      <%= link_to "Dessert", main_dessert_path, class: "btn btn-outline-success" %>
+      <%= link_to "Dessert", dessert_path, class: "btn btn-warning" %>
   </div>
 </div>
 </div>
-</div>
+
+<div class="col-md-6 col-lg-4">
+
+    <div class="card text-center">
+    <%= image_tag 'food02.jpg' %>
+      <div class="card-block">
+      <%= link_to "Drinks", drinks_path, class: "btn btn-warning" %>
+  </div>
 </div>
 </div>
