--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -70,7 +70,8 @@
       </div>
     </div>
    </div>
-
+ </div>
+ 
       <h2 class="menu-title"> Follow Us!</h2>
       <div class="social">
     <%= image_tag 'facebook.png' %>
