--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,9 +1,7 @@
 <% content_for :head do %>
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
-<div class="container">
-  <h1 class="menu-title"> Welcome to</br> Mayan Kitchen!</h1>
-</div>
+  <h1 class="menu-title"> Welcome to Mayan Kitchen!</h1>
 
 <div class="logo">
   <%= image_tag 'mayan-logo.jpg' %>
@@ -11,9 +9,9 @@
 
 
 <div class="carousel">
-  <div><%= image_tag 'food01.jpg' %></div>
-  <div><%= image_tag 'food02.jpg' %></div>
-  <div><%= image_tag 'food03.jpg' %></div>
+  <div><%= image_tag 'carousel01.jpeg' %></div>
+  <div><%= image_tag 'carousel02.jpeg' %></div>
+  <div><%= image_tag 'carousel03.jpeg' %></div>
 </div>
 
   <script type="text/javascript">
@@ -71,7 +69,7 @@
     </div>
    </div>
  </div>
- 
+
       <h2 class="menu-title"> Follow Us!</h2>
       <div class="social">
     <%= image_tag 'facebook.png' %>
