Fixes undefined route on the edit page for "show" link

--- a/app/views/menu_items/edit.html.erb
+++ b/app/views/menu_items/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', menu_item: @menu_item %>
 
-<%= link_to 'Show', @menu_item %> |
+<%= link_to 'Show', menu_item_path(@menu_item) %> |
 <%= link_to 'Back', menu_items_path %>
