--- a/app/views/menu_items/_form.html.erb
+++ b/app/views/menu_items/_form.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="container">
-<%= simple_form_for @menu_item do |f| %>
+<%= simple_form_for @menu_item.becomes(MenuItem) do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.input :price %>
@@ -10,4 +10,3 @@
   <%= f.button :submit %>
 <% end %>
 </div>
-
