changed images in carousel

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -9,9 +9,9 @@
 
 
 <div class="carousel">
-  <div><%= image_tag 'carousel01.jpeg' %></div>
-  <div><%= image_tag 'carousel02.jpeg' %></div>
-  <div><%= image_tag 'carousel03.jpeg' %></div>
+  <div><%= image_tag 'food01.jpg' %></div>
+  <div><%= image_tag 'food02.jpg' %></div>
+  <div><%= image_tag 'food03.jpg' %></div>
 </div>
 
   <script type="text/javascript">
