--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -71,10 +71,12 @@
  </div>
 
       <h2 class="menu-title"> Follow Us!</h2>
+      <div class="container">
       <div class="social">
     <%= image_tag 'facebook.png' %>
     <%= image_tag 'twitter.png' %>
       </div>
+    </div>
   </div>
 </div>
 </div>
