--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,6 +1,6 @@
 
 <div id="logo">
-<%= image_tag 'mayan-logo.jpg', :height => 200, :width => 350 %>
+<%= image_tag 'mayan-logo.jpg' %>
 </div>
 <div class="apply">
 <h4>507 Broad Street | Chattanooga, TN 37402 
