--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -18,7 +18,8 @@
     $(document).ready(function(){
       $('.carousel').slick({
           infinite: true,
-          speed: 300,
+          autoplay: true,
+          autoplaySpeed: 5000,
           fade: true,
           slidesToShow: 1,
           adaptiveHeight: true
