--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -24,6 +24,8 @@
     <%= image_tag 'food02.jpg' %>
       <div class="card-block">
       <%= link_to "Lunch", lunch_path, class: "btn btn-warning" %>
+              <p class="card-test">Mon-Fri 11AM-3PM</p>
+
   </div>
 </div>
 
@@ -35,6 +37,8 @@
     <%= image_tag 'food03.jpg' %>
       <div class="card-block">
       <%= link_to "Brunch", brunch_path, class: "btn btn-warning" %>
+              <p class="card-text">Sat & Sun 9AM-3PM</p>
+
   </div>
 </div>
 </div>
