--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <title>Themayankitchen</title>
+    <title>Mayan Kitchen</title>
     <%= csrf_meta_tags %>
       <% if content_for?(:head) %>
     <%= yield(:head) %>
   <% end %>
+
 
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -15,5 +17,9 @@
 
   <body>
     <%= yield %>
+           <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+
   </body>
+
 </html>
