added address to home page

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -27,7 +27,9 @@
     });
   </script>
 
-
+<div class="container">
+<h2> 507 Broad Street | Chattanooga, TN 37402</h2>
+</div>
 
 <h2 class="menu-title">Hours</h2></br>
 
