--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -28,7 +28,7 @@
   </script>
 
 <div class="container">
-<h2> 507 Broad Street | Chattanooga, TN 37402</h2>
+<h2> 507 Broad Street </br> Chattanooga, TN 37402</h2>
 </div>
 
 <h2 class="menu-title">Hours</h2></br>
